--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -1,14 +1,4 @@
 <body>
-<div ng-controller="DashboardCtrl">
-  <h4>Upload on file select</h4>
-  <button type="file" ngf-select="uploadFiles($file, $invalidFiles)"
-          accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">
-      Select File</button>
-  <br><br>
-  File:
-</div>
-
-
       <nav class="navbar navbar-default">
          <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -74,10 +64,11 @@
          <div class="row content">
             <div class="col-sm-1 sidenav">
             </div>
-            <div class="col-sm-8 text-left">
+            <div class="col-sm-8 text-left" ng-controller="DashboardCtrl">
                <h1>Welcome</h1>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-               <button class="btn btn-block">Upload Receipts</button>
+               <button class="btn btn-block" type="file" ngf-select="uploadFiles($file, $invalidFiles)"
+          accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">Upload Receipts</button>
             </div>
             <div class="col-sm-3 sidenav">
                 <div class="panel">
