--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 <body>
+<div ng-controller="DashboardCtrl">
       <nav class="navbar navbar-default">
          <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -64,48 +65,23 @@
          <div class="row content">
             <div class="col-sm-1 sidenav">
             </div>
-            <div class="col-sm-8 text-left" ng-controller="DashboardCtrl">
+            <div class="col-sm-8 text-left">
                <h1>Welcome</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+               <p>Upload receipts</p>
                <button class="btn btn-block" type="file" ngf-select="uploadFiles($file, $invalidFiles)"
           accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">Upload Receipts</button>
             </div>
-            <div class="col-sm-3 sidenav">
+            <div class="col-sm-3 sidenav" ng-model="allFriends">
                 <div class="panel">
                     <h3>Friends</h3>
                     <div class="list-group">
                         <div class="list-group-item row">
-                            <div class="col-sm-4">
-                                <p class="text-center">
-                                <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
-                                </p>
+                            
+                            <div class="col-sm-8" ng-repeat="friend in allFriends">
+                                <p class="nav-text text-left"><strong>{{friend.firstName}}</strong></p>
+                                <p class="nav-text text-left small">{{friend.emailId}}</p>
                             </div>
-                            <div class="col-sm-8">
-                                <p class="nav-text text-left"><strong>Friend 1</strong></p>
-                                <p class="nav-text text-left small">user@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="list-group-item row">
-                            <div class="col-sm-4">
-                                <p class="text-center">
-                                <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
-                                </p>
-                            </div>
-                            <div class="col-sm-8">
-                                <p class="nav-text text-left"><strong>Friend 2</strong></p>
-                                <p class="nav-text text-left small">user@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="list-group-item row">
-                            <div class="col-sm-4">
-                                <p class="text-center">
-                                <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
-                                </p>
-                            </div>
-                            <div class="col-sm-8">
-                                <p class="nav-text text-left"><strong>Friend 3</strong></p>
-                                <p class="nav-text text-left small">user@gmail.com</p>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
