--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -1,3 +1,4 @@
+
 <div ng-controller="DashboardCtrl">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -15,7 +16,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="#!/dashboard" class="dropdown-toggle" data-toggle="dropdown">
               <span class="glyphicon glyphicon-user"></span>
               <strong>User</strong>
               <span class="glyphicon glyphicon-chevron-down"></span>
@@ -62,28 +63,42 @@
 
   <div class="container-fluid text-center">
     <div class="row content">
-      <div class="col-sm-1 sidenav">
+      <nav-Bar></nav-Bar>
+      <!--<div class="col-sm-1 sidenav">
+
+
+    </div>-->
+    <div class="col-sm-8 text-left">
+      <h1>Welcome</h1>
+      <p>Upload receipts</p>
+      <button class="btn btn-block" type="file" ngf-select="uploadFiles($file, $invalidFiles)"
+      accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">Upload Receipts</button>
+      <button class="btn btn-block" type="button" ng-click="receiptsView()">View Receipts</button>
+    </div>
+    <div class="col-sm-2 sidenav" ng-model="allFriends">
+      <div class="panel">
+        <h3>Friends</h3>
+        <div class="list-group">
+          <div class="list-group-item row">
+            <div class="col-sm-8" ng-repeat="friend in allFriends">
+              <p class="nav-text text-left"><strong>{{friend.firstName}}</strong></p>
+              <p class="nav-text text-left small">{{friend.emailId}}</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-sm-8 text-left">
-        <h1>Welcome</h1>
-        <p>Upload receipts</p>
-        <button class="btn btn-block" type="file" ngf-select="uploadFiles($file, $invalidFiles)"
-        accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">Upload Receipts</button>
-        <button class="btn btn-block" type="button" ng-click="receiptsView()">View Receipts</button>
-      </div>
-      <div class="col-sm-3 sidenav" ng-model="allFriends">
-        <div class="panel">
-          <h3>Friends</h3>
-          <div class="list-group">
-            <div class="list-group-item row">
-              <div class="col-sm-8" ng-repeat="friend in allFriends">
-                <p class="nav-text text-left"><strong>{{friend.firstName}}</strong></p>
-                <p class="nav-text text-left small">{{friend.emailId}}</p>
-              </div>
+      <div class="panel">
+        <h3>Notification</h3>
+        <div class="list-group">
+          <div class="list-group-item row">
+            <div class="col-sm-8" ng-repeat="noti in Notification">
+              <p class="nav-text text-left"><strong>{{noti.firstName}}</strong></p>
+              <p class="nav-text text-left small">{{noti.emailId}}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
