added add receipts page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,6 +53,7 @@
 <script type="text/javascript" src="./app.js"></script>
 <script type="text/javascript" src="./user/userAuth.js"></script>
 <script type="text/javascript" src="./dashboard/dashboard.js"></script>
+<script type="text/javascript" src="./addReceipts/addReceipts.js"></script>
 <script type="text/javascript" src="./landingPage/landingPage.js"></script>
 <script type="text/javascript" src="./receiptsView/receiptsView.js"></script>
 <script type="text/javascript" src="./receiptsViewWithOption/receiptsViewWithOption.js"></script>
