--- a/src/main/resources/static/navigationMenu/navBar.html
+++ b/src/main/resources/static/navigationMenu/navBar.html
@@ -3,11 +3,11 @@
         <ul class="nav in" id="side-menu">
             <sidebar-search></sidebar-search>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                <a href="#!/dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li ui-sref-active="active">
 
-                <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Add Receipts<span></span></a>
+                <a href="#!/addReceipts"><i class="fa fa-bar-chart-o fa-fw"></i> Add Receipts<span></span></a>
 
             </li>
             <li ui-sref-active="active">
