added UI structure

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="./receiptsViewWithOption/receiptsViewWithOption.js"></script>
 <script type="text/javascript" src="./splitItem/splitItem.js"></script>
 <script type="text/javascript" src="./splitTotal/splitTotal.js"></script>
+<script type="text/javascript" src="./group/createGroup.js"></script>
 
 </body>
 </html>
