--- a/src/main/resources/static/navigationMenu/navBar.html
+++ b/src/main/resources/static/navigationMenu/navBar.html
@@ -11,10 +11,10 @@
 
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> View Receipts</a>
+                <a href="#!/receiptsView"><i class="fa fa-table fa-fw"></i> View Receipts</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Create Group</a>
+                <a href="#!/createGroup"><i class="fa fa-edit fa-fw"></i> Create Group</a>
             </li>   
         </ul>
     </div>
