--- a/src/main/resources/static/receiptsView/receiptsView.html
+++ b/src/main/resources/static/receiptsView/receiptsView.html
@@ -1,14 +1,72 @@
 <div ng-controller = "ReceiptsViewCtrl">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Receipt uploaded</h1>
+   <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="btn navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Receipt Uploaded</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#!/receiptsView" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>
+              <strong>User</strong>
+              <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <div class="navbar-login">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <p class="text-center">
+                        <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
+                      </p>
+                    </div>
+                    <div class="col-sm-8">
+                      <p class="nav-text text-left"><strong>User Name</strong></p>
+                      <p class="nav-text text-left small">user@gmail.com</p>
+                      <p class="text-left">
+                        <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <div class="navbar-login navbar-login-session">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <p>
+                        <a href="#" class="btn btn-danger btn-block"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logut</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
     </div>
-    <!-- /.col-lg-12 -->
-  </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+  <div class="container-fluid text-center">
+    <div class="row content">
+      <nav-Bar></nav-Bar>
   <!-- /.row -->
   <div class="row">
     <!-- /.col-lg-6 -->
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-1">
       <div class="panel panel-default">
         <div class="panel-heading">
           Receipt Details
@@ -19,9 +77,9 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th>Item Number</th>
-                  <th>Item Name</th>
-                  <th>Price</th>
+                  <th class="tableRow">Item Number</th>
+                  <th class="tableRow">Item Name</th>
+                  <th class="tableRow">Price</th>
                 </tr>
               </thead>
               <tbody>
@@ -51,4 +109,6 @@
     </div>
     <!-- /.col-lg-6 -->
   </div>
+</div>
+</div>
 </div>
