--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,6 +47,8 @@
 <script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./assets/js/jquery.backstretch.min.js"></script>
 <script type="text/javascript" src="./assets/js/scripts.js"></script>
+<link href="./bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+<script src="./bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
 
 
