--- a/src/main/resources/static/receiptsView/receiptsView.html
+++ b/src/main/resources/static/receiptsView/receiptsView.html
@@ -1,5 +1,5 @@
 <div ng-controller = "ReceiptsViewCtrl">
-   <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -59,56 +59,83 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-
   <div class="container-fluid text-center">
     <div class="row content">
       <nav-Bar></nav-Bar>
-  <!-- /.row -->
-  <div class="row">
-    <!-- /.col-lg-6 -->
-    <div class="col-sm-6 col-sm-offset-1">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          Receipt Details
+      <!-- /.row -->
+      <div class="row">
+        <!-- /.col-lg-6 -->
+        <div class="col-sm-6 col-sm-offset-1">
+          <form editable-form name="tableform" onaftersave="saveTable()" oncancel="cancel()">
+            <!-- table -->
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                Receipt Details
+              </div>
+              <div class="panel-body" >
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th class="tableRow">Id</th>
+                        <th class="tableRow">Description</th>
+                        <th class="tableRow">Amt</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr ng-repeat="item in itemsArray | filter:filterItem" class="success">
+                        <td>
+                          <span e-form="tableform" >
+                            {{ $index + 1 }}
+                          </span>
+                        </td>
+                        <td>
+                          <span editable-text="item.itemDescription" e-form="tableform">
+                            {{ item.itemDescription || 'Not Defined' }}
+                          </span>
+                        </td>
+                        <td>
+                          <span editable-text="item.itemAmt" e-form="tableform">
+                            ${{ item.itemAmt || 'Not Defined' }}
+                          </span>
+                        </td>
+                      </tr>
+                      <tr class="info" ng-model="itms">
+                        <td>Tax</td>
+                        <td></td>
+                        <td>
+                          <span editable-text="itms.tax" e-form="tableform">
+                            ${{itms.tax}}
+                          </span>
+                        </td>
+                      </tr>
+                      <tr class="danger" ng-model="itms">
+                        <td>Total</td>
+                        <td></td>
+                        <td>
+                          <span editable-text="itms.total" e-form="tableform">
+                            ${{itms.total}}
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <!-- buttons -->
+            <div class="btn-edit">
+              <button type="button" class="btn btn-default" ng-show="!tableform.$visible" ng-click="tableform.$show()">
+                edit
+              </button>
+            </div>
+            <div class="btn-form" ng-show="tableform.$visible">
+              <button type="submit" ng-disabled="tableform.$waiting" class="btn btn-primary">save</button>
+              <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()" class="btn btn-default">cancel</button>
+            </div>
+          </form>
         </div>
-        <!-- /.panel-heading -->
-        <div class="panel-body" >
-          <div class="table-responsive">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th class="tableRow">Item Number</th>
-                  <th class="tableRow">Item Name</th>
-                  <th class="tableRow">Price</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="success" ng-model="itemsArray" ng-repeat="x in itemsArray">
-                  <td>{{ $index + 1 }}</td>
-                  <td>{{x.itemDescription}}</td>
-                  <td>${{x.itemAmt}}</td>
-                </tr>
-                <tr class="info" ng-model="itms">
-                  <td>Tax</td>
-                  <td></td>
-                  <td>${{itms.tax}}</td>
-                </tr>
-                <tr class="danger" ng-model="itms">
-                  <td>Total</td>
-                  <td></td>
-                  <td>${{itms.total}}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <!-- /.table-responsive -->
-        </div>
-        <!-- /.panel-body -->
       </div>
-      <!-- /.panel -->
     </div>
-    <!-- /.col-lg-6 -->
   </div>
-</div>
-</div>
 </div>
