--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,12 +43,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
 <script type="text/javascript" src="./bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script> 
 <script type="text/javascript" src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+<script type="text/javascript" src="./bower_components/angular-checkboxes/angular-checkboxes.js"></script>
 <script type="text/javascript" src="./assets/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="./assets/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./assets/js/jquery.backstretch.min.js"></script>
 <script type="text/javascript" src="./assets/js/scripts.js"></script>
 <link href="./bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
 <script src="./bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 
 
 
