--- a/src/main/resources/static/splitItem/splitItem.html
+++ b/src/main/resources/static/splitItem/splitItem.html
@@ -1,1 +1,152 @@
-split items
+<div ng-controller = "SplitItemCtrl">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="btn navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Receipt Uploaded</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#!/receiptsView" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>
+              <strong>User</strong>
+              <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <div class="navbar-login">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <p class="text-center">
+                        <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
+                      </p>
+                    </div>
+                    <div class="col-sm-8">
+                      <p class="nav-text text-left"><strong>User Name</strong></p>
+                      <p class="nav-text text-left small">user@gmail.com</p>
+                      <p class="text-left">
+                        <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <div class="navbar-login navbar-login-session">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <p>
+                        <a href="#" class="btn btn-danger btn-block"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logut</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+  <div class="container-fluid text-center">
+    <div class="row content">
+      <nav-Bar></nav-Bar>
+      <!-- /.row -->
+      <div class="row">
+        <!-- /.col-lg-6 -->
+        <div class="col-sm-6 col-sm-offset-1">
+          <form>
+            <!-- table -->
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                Receipt Details
+              </div>
+              <div class="panel-body" >
+                <div class="table-responsive">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th class="tableRow">Id</th>
+                        <th class="tableRow">Desciption</th>
+                        <th class="tableRow">Amt</th>
+                        <th class="tableRow">Split</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr ng-repeat="item in itemsArray" class="success">
+                      {{curId}}
+                        <td>{{ $index+1 }}</td>
+                        <td>
+                          <span ng-model="item.itemDescription">
+                            {{item.itemDescription}}
+                          </span>
+                        </td>
+                        <td>
+                          <span ng-model="item.itemPrice">
+                            ${{item.itemPrice}}
+                          </span>
+                        </td>
+                        <td>
+                          <button class="btn-split btn-primary dropdown-toggle" type="button" data-toggle="modal" data-target="#myModal1" ng-click="addfrnds($index)">Add friends
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+
+            <!-- buttons -->
+            <div class="row">
+              <div class="btn-edit col-sm-6 col-sm-push-3">
+                <button type="button" class="btn btn-default">
+                  View result
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal1" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content modelColor">
+      <div class="modal-header">
+        <h4><span class="glyphicon glyphicon-user"></span>Choose friends</h4>
+      </div>
+      <div class="modal-body">
+        <div class="modelMargin">
+        <div class="checkbox" ng-repeat="friend in allFriends" mt-to="friendList">
+          <label><input type="checkbox" mt-checkbox="friend.id">{{friend.firstName}}</label>
+        </div>
+        <button class="btn-split btn-primary" ng-click="frnd()" data-dismiss="modal">Add friends</button>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
+          <span class="glyphicon glyphicon-remove"></span> Cancel
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
