--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,7 +51,7 @@
 <link href="./bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
 <script src="./bower_components/angular-xeditable/dist/js/xeditable.js"></script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+<!--  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 
 
