--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -116,10 +116,10 @@
 
 				<div class="row content margin-bottom-10">
 					<div class="col-sm-6">
-						<zingchart id = "barChart" zc-values="myBarData" zc-json="myBar" zc-type="bar" zc-width="100%" style="display: block;"></zingchart>
+						<zingchart id = "barChart" zc-values="myBarData" zc-scale-x="scaleX" zc-json="myBar" zc-type="bar" zc-width="100%" style="display: block;"></zingchart>
 					</div>
 					<div class="col-sm-6">
-						<zingchart id = "pieChart" zc-values="myPieData" zc-json="myPieJson" zc-width="100%" style="display: block;"></zingchart>
+						<zingchart id = "pieChart" zc-values="myPieData" zc-scale-x="scaleX" zc-json="myPieJson" zc-width="100%" style="display: block;"></zingchart>
 					</div>
 				</div>
 			<!-- <button class="btn btn-block" type="file" ngf-select="uploadFiles($file, $invalidFiles)"
