added final Project

--- a/src/main/resources/static/landingPage/landingPage.html
+++ b/src/main/resources/static/landingPage/landingPage.html
@@ -1,8 +1,105 @@
-<!--<form action="/connect/twitter" method="POST">
-		<div class="formInfo">
-			<p>You aren't connected to Twitter yet. Click the button to connect this application with your Twitter account.</p>
+<nav class="navbar navbar-default navBarBg">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="btn navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Digitized Bill</a>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="#!/userAuth" class="dropdown-toggle">
+							<span class="glyphicon glyphicon-user"></span>
+							<strong>Sign In</strong>
+						</a>
+						
+					</li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
 		</div>
-			<p><button type="submit">Connect to Twitter</button></p>
-</form>-->
+		<!-- /.container-fluid -->
+	</nav>
+<div>
 
-<a href="#!/userAuth">userauth</a>
+<div class="row">
+<div class="col-sm-10 col-sm-push-1">
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">Get itemized receipt data !</h3>
+  <img src="https://cloud.githubusercontent.com/assets/23113162/26293413/61cb1bec-3e71-11e7-9242-bc4d123982e1.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <h3>Track and split expenditure as well ! </h3>
+</div>
+
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">Application details</h3>
+  <p>An application that lets users to upload receipts and split the expenses among selected users. The user can login to the system via social login. Notifications and graphs to analyze monthly expenditure is available. The other features include creating of groups and splitting expenses with friends in a group.</p>
+</div>
+
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">Who built me ?</h3>
+  <div class="row">
+    <div class="col-sm-4">
+      Pooja Prakashchand- Full-Stack Software Developer.
+I am keen on learning new technologies. Currently, I am learning machine learning. </br>
+      <img src="https://cloud.githubusercontent.com/assets/23113162/26292956/0ef03e22-3e6f-11e7-8362-9b1aa67f33e3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      Sesha Sushmita Yellamraju - Software developer. I am experienced developer and tester. Currently working on projects involving deep learning. </br>
+      <img src="https://cloud.githubusercontent.com/assets/23113162/26292959/18e5652e-3e6f-11e7-9513-a540fc50279e.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      SaiKruthi Vemuru-Software developer.
+I worked as a Full-Stack JAVA developer and I am currently learning mobile development. </br>
+      <img src="https://cloud.githubusercontent.com/assets/23113162/26293094/efafbb40-3e6f-11e7-963b-86477fb39dc0.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div>
+</div>
+<div>
+<div class="row">
+<div class="col-sm-12">
+<!-- Footer -->
+<footer class="container-fluid bg-4 text-center" style="text-align:right">
+  <p>&copy; For CMPE220 by Pooja, Kruthi, Sushmita.</p> 
+</footer>
+</div>  
+</div>
+	
+
+
+<style>
+  body {
+  	  font-family: 'Roboto', sans-serif;
+      font: 20px Montserrat, sans-serif;
+      line-height: 1.8;
+      color: #f5f6f7;
+  }
+  p {font-size: 16px;}
+  .margin {margin-bottom: 45px;}
+  .bg-1 { 
+      background-color: #1abc9c; /* Green */
+      color: #ffffff;
+  }
+  .bg-2 { 
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+  }
+  .bg-3 { 
+      background-color: #ffffff; /* White */
+      color: #555555;
+  }
+  .bg-4 { 
+      background-color: #2f2f2f; /* Black Gray */
+      color: #fff;
+  }
+
+  </style>
