--- a/src/main/resources/static/splitItem/splitItem.html
+++ b/src/main/resources/static/splitItem/splitItem.html
@@ -135,7 +135,7 @@
       <div class="modal-body">
         <div class="modelMargin">
         <div class="checkbox" ng-repeat="friend in allFriends" mt-to="friendList">
-          <label><input type="checkbox" mt-checkbox="friend.id">{{friend.firstName}}</label>
+          <label><input type="checkbox" mt-checkbox="friend">{{friend.firstName}}</label>
         </div>
         <button class="btn-split btn-primary" ng-click="frnd()" data-dismiss="modal">Add friends</button>
         </div>
