--- a/src/main/resources/static/dashboard/dashboard.html
+++ b/src/main/resources/static/dashboard/dashboard.html
@@ -28,7 +28,7 @@
 									<div class="row">
 										<div class="col-sm-4">
 											<p class="text-center">
-												<img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
+												<img style="max-height:95px;width:130px;" class="img-circle icon-size" src="https://cloud.githubusercontent.com/assets/17193889/26291992/6a368c12-3e67-11e7-9452-aa7d97bf2fbb.jpg" alt="not present">
 											</p>
 										</div>
 										<div class="col-sm-8">
@@ -71,7 +71,7 @@
 			<div class="container-fluid text-center">
 				<div class="row content">
 					<div class="welcome-dashboard">
-						Welcome
+						Welcome {{user.firstName}}
 					</div>	
 				</div></br>
 
@@ -83,8 +83,8 @@
 
 				<div class="row content">
 					<div class="panel panel-default">
-						<div class="panel-heading you-owe">You owe: {{youOwe}}</div>
-						<div class="panel-heading you-are-owed">You are owed: {{youAreOwed}}</div>
+						<div class="panel-heading you-owe">You owe: ${{totalYouOwe}}</div>
+						<div class="panel-heading you-are-owed">You are owed: ${{totalYouAreOwed}}</div>
 					</div>
 				</div></br>
 
@@ -97,15 +97,15 @@
 								<thead>
 									<tr>
 										<th>Receipt Name</th>
-										<th>Split Type</th>
 										<th>Total</th>
+										<th>Split Type</th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr class="info" ng-repeat="receipts in allReceipts">
-										<td>John</td>
-										<td>Doe</td>
-										<td>john@example.com</td>
+									<tr class="info" ng-repeat="receipts in bills">
+										<td>{{receipts.billName}}</td>
+										<td>{{receipts.total}}</td>
+										<td>{{receipts.totOrItem}}</td>
 									</tr>
 								</tbody>
 							</table>
@@ -134,8 +134,8 @@
 			<div class="list-group">
 				<div class="list-group-item row">
 					<div class="col-sm-8" ng-repeat="friend in allFriends">
-						<p class="nav-text text-left"><strong>{{friend.firstName}}</strong></p>
-						<p class="nav-text text-left small">{{friend.emailId}}</p>
+						<div class="nav-text text-left small" style="color:cadetblue"><strong>{{friend.firstName}}</strong>
+						{{friend.emailId}}</div>
 					</div>
 				</div>
 			</div>
@@ -143,13 +143,17 @@
 		<div class="panel">
 			<h3>Notification</h3>
 			<div class="list-group">
-				<div class="list-group-item row">
-					<div class="col-sm-8" ng-repeat="noti in Notification">
-						<p class="nav-text text-left"><strong>{{noti.firstName}}</strong></p>
-						<p class="nav-text text-left small">{{noti.emailId}}</p>
-					</div>
-				</div>
-			</div>
+    		<div class="list-group-item row">
+     			
+      			<div ng-repeat="noti in youAreOwed">
+      				<div class=" notification-owed nav-text text-left small">{{noti}}</div>
+     				</div>
+     			<div ng-repeat="noti in youOwe">
+      			<div class=" notification-owe nav-text text-left small">{{noti}}</div>
+     			</div>
+     
+    </div>
+   </div>
 		</div>
 	</div>
 </div>
