--- a/src/main/resources/static/group/createGroup.html
+++ b/src/main/resources/static/group/createGroup.html
@@ -1,4 +1,70 @@
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="btn navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Receipt Uploaded</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#!/receiptsView" class="dropdown-toggle" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-user"></span>
+              <strong>User</strong>
+              <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <div class="navbar-login">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <p class="text-center">
+                        <img style="max-height:95px;width:130px;" class="img-circle icon-size" src="../DigitizedBill/assets/img/userimg.jpg">
+                      </p>
+                    </div>
+                    <div class="col-sm-8">
+                      <p class="nav-text text-left"><strong>User Name</strong></p>
+                      <p class="nav-text text-left small">user@gmail.com</p>
+                      <p class="text-left">
+                        <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <div class="navbar-login navbar-login-session">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <p>
+                        <a href="#" class="btn btn-danger btn-block"><span class="glyphicon glyphicon-log-out"></span>&nbsp;Logut</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+
 <div ng-controller="CreateGroupCtrl">
+<div class="container-fluid text-center">
+    <div class="row content">
+      <nav-Bar></nav-Bar>
+      <div class="col-sm-8">
 	<nav class="navbar navbar-default">
 		<form name="groupForm" ng-submit="saveGroup()">
 			<div>
@@ -9,7 +75,7 @@
 			<div class="container-fluid">
 				<div ng-model="allFriends">
 					<div class="panel">
-						<h4>Select Friends</h4>
+						<h5>Select Friends</h5>
 						<div class="list-group">
 							<div class="list-group-item row">
 								<div class="col-sm-8" ng-repeat="friend in allFriends">
@@ -32,4 +98,20 @@
 			</div>
 		</form>
 	</nav>
+	</div>
 </div>
+</div>
+</div>
+
+<style>
+.input-class
+{
+  height:30px;
+}
+
+.input-class[placeholder]
+{
+  line-height:30px;
+  font-size:22px;
+}
+</style>
