--- a/src/main/resources/static/user/userAuth.html
+++ b/src/main/resources/static/user/userAuth.html
@@ -30,7 +30,7 @@
     			                        </div>
     			                        <button type="submit" class="btn">Sign in!</button>
     			                    </form>
-    			                    <h3>...or login with:</h3>
+    			                    <h3>Login with:</h3>
     			                    <form action="/connect/twitter" method="POST">
     	                        		<button class="btn btn-link-2 btn-link-2-twitter" type="submit">
     	                        			<i class="fa fa-twitter"></i> Twitter
